--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,11 @@ numpy==2.2.6
 opencv-python==4.12.0.88
 pillow==12.0.0
 psutil==7.1.3
+pynput==1.8.1
+pyobjc-core==12.1
+pyobjc-framework-ApplicationServices==12.1
+pyobjc-framework-Cocoa==12.1
+pyobjc-framework-CoreText==12.1
+pyobjc-framework-Quartz==12.1
+six==1.17.0
 Werkzeug==3.1.4
